--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build docker
-      run: docker build -t sparkle-frontend --file ./misc/Dockerfile .
-    - name: Push docker container 
+      run: docker buildx build --platform linux/arm/v7 --tag sparkle-frontend --file ./misc/Dockerfile .
+    - name: Create docker container 
       run: |
           docker login --username ${{ secrets.DOCKER_AUTH_LOGIN }} --password ${{ secrets.DOCKER_AUTH_TOKEN }}
           docker tag sparkle-frontend ${{ secrets.DOCKER_AUTH_LOGIN }}/sparkle-frontend 
