--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,9 +11,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build docker
-      run: docker buildx build --platform linux/arm/v7 --tag sparkle-frontend --file ./misc/Dockerfile .
+      run: 
+        docker buildx ls
+        docker buildx build --platform linux/arm/v7 --tag sparkle-frontend --file ./misc/Dockerfile .
     - name: Create docker container 
       run: |
-          docker login --username ${{ secrets.DOCKER_AUTH_LOGIN }} --password ${{ secrets.DOCKER_AUTH_TOKEN }}
-          docker tag sparkle-frontend ${{ secrets.DOCKER_AUTH_LOGIN }}/sparkle-frontend 
-          docker push ${{ secrets.DOCKER_AUTH_LOGIN }}/sparkle-frontend
+        docker login --username ${{ secrets.DOCKER_AUTH_LOGIN }} --password ${{ secrets.DOCKER_AUTH_TOKEN }}
+        docker tag sparkle-frontend ${{ secrets.DOCKER_AUTH_LOGIN }}/sparkle-frontend 
+        docker push ${{ secrets.DOCKER_AUTH_LOGIN }}/sparkle-frontend
