--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build docker
-      run: 
+      run: |
         docker buildx ls
         docker buildx build --platform linux/arm/v7 --tag sparkle-frontend --file ./misc/Dockerfile .
     - name: Create docker container 
