--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,12 +14,9 @@ jobs:
       uses: crazy-max/ghaction-docker-buildx@v1      
       with:        
         version: latest
-    - name: Build docker
-      run: |
-        docker buildx ls
-        docker buildx build --platform linux/arm/v7 --tag sparkle-frontend --file ./misc/Dockerfile .
     - name: Create docker container 
       run: |
         docker login --username ${{ secrets.DOCKER_AUTH_LOGIN }} --password ${{ secrets.DOCKER_AUTH_TOKEN }}
-        docker tag sparkle-frontend ${{ secrets.DOCKER_AUTH_LOGIN }}/sparkle-frontend 
-        docker push ${{ secrets.DOCKER_AUTH_LOGIN }}/sparkle-frontend
+        docker buildx build --platform linux/arm/v7 --tag sparklesh/sparkle-frontend:latest \
+        --output type=image,push=true --file ./misc/Dockerfile .
+
