--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "material-ui-color-picker": "^3.5.1",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.0.0",
     "react-scripts": "4.0.3",
